--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
+  margin-bottom: 15px;
 }
 
 .hour {
