added for each loop to iterate through the description class and give color to the corresponding texareas

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  margin-bottom: 18px;
 }
 
 .saveBtn i:hover {
